[gd_scene load_steps=27 format=2]

[ext_resource path="res://Imagenes/SkyBoxGrande.jpg" type="Texture" id=1]
[ext_resource path="res://Pruebas/Spatial.gd" type="Script" id=2]
[ext_resource path="res://Objetos/LuzTitilante.tscn" type="PackedScene" id=3]
[ext_resource path="res://Jugador/PrimeraPersona.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lugares/MockupCasaDartsch.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objetos/Trampa.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objetos/Amigo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objetos/Llave.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objetos/Puerta.tscn" type="PackedScene" id=9]
[ext_resource path="res://Jugador/Enemigo.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objetos/Escondite.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sonidos/Ambient_Horror.mp3" type="AudioStream" id=12]
[ext_resource path="res://Sonidos/Puerta 2.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sonidos/Agarra Llave.ogg" type="AudioStream" id=14]
[ext_resource path="res://Interfaz/GUIEnJuego.tscn" type="PackedScene" id=15]
[ext_resource path="res://Objetos/Nota.tscn" type="PackedScene" id=16]
[ext_resource path="res://Objetos/TrampaPrueba.tscn" type="PackedScene" id=17]
[ext_resource path="res://Puzzles/Puzzle_2C.tscn" type="PackedScene" id=18]
[ext_resource path="res://Jugador/Enemigo_Prueba.gd" type="Script" id=19]
[ext_resource path="res://Puzzles/Puzzle_1C.tscn" type="PackedScene" id=20]
[ext_resource path="res://Puzzles/Puzzle_1B.tscn" type="PackedScene" id=21]

[sub_resource type="PanoramaSky" id=1]
radiance_size = 4
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( 1, 0, 0, 0, -0.573576, -0.819152, 0, 0.819152, -0.573576 )
background_energy = 0.17
ambient_light_color = Color( 0.623529, 0.623529, 0.623529, 1 )
ambient_light_energy = 0.02
ambient_light_sky_contribution = 0.0
fog_enabled = true
fog_color = Color( 0.168627, 0.176471, 0.184314, 1 )
fog_sun_color = Color( 0.188235, 0.188235, 0.188235, 1 )
fog_depth_begin = 1.0
tonemap_exposure = 0.64
auto_exposure_enabled = true
auto_exposure_scale = 0.05
auto_exposure_max_luma = 0.18
ssao_enabled = true
dof_blur_far_distance = 28.84
dof_blur_near_enabled = true
dof_blur_near_distance = 0.97
glow_enabled = true
glow_bloom = 0.01
adjustment_enabled = true
adjustment_brightness = 0.73

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -69.5, 0.4, -79.4, -79.4, 0.4, -79.4, -79.4, 0.4, -69.5, -79.4, 0.4, 69.1, -79.4, 0.4, 79.3, -69.5, 0.4, 79.3, 79.3, 0.4, -69.5, 79.3, 0.4, -79.4, 69.1, 0.4, -79.4, 69.1, 0.4, 79.3, 79.3, 0.4, 79.3, 79.3, 0.4, 69.1, -59.6, 0.4, -79.4, -69.5, 0.4, -79.4, -79.4, 0.4, -69.5, -79.4, 0.4, -59.6, -79.4, 0.4, 69.1, -69.5, 0.4, 79.3, -59.6, 0.4, 79.3, 79.3, 0.4, -59.6, 79.3, 0.4, -69.5, 69.1, 0.4, -79.4, 59.2, 0.4, -79.4, 59.2, 0.4, 79.3, 69.1, 0.4, 79.3, 79.3, 0.4, 69.1, -79.4, 0.4, 29.5, -79.4, 0.4, 39.4, -29.9, 0.4, 79.3, -20, 0.4, 79.3, -79.4, 0.4, 59.2, -79.4, 0.4, 69.1, -59.6, 0.4, 79.3, -49.7, 0.4, 79.3, 79.3, 0.4, -10.1, 79.3, 0.4, -20, 19.6, 0.4, -79.4, 9.7, 0.4, -79.4, 59.2, 0.4, 79.3, 79.3, 0.4, 69.1, 79.3, 0.4, 59.2, 49.3, 0.4, 79.3, -49.7, 0.4, -79.4, -59.6, 0.4, -79.4, -79.4, 0.4, -59.6, -79.4, 0.4, -49.7, 29.5, 0.4, 79.3, 79.3, 0.4, 39.4, 79.3, 0.4, 29.5, 19.6, 0.4, 79.3, 79.3, 0.4, -49.7, 79.3, 0.4, -59.6, 59.2, 0.4, -79.4, 49.3, 0.4, -79.4, -20, 0.4, -79.4, -29.9, 0.4, -79.4, -79.4, 0.4, -29.9, -79.4, 0.4, -20, -0.199997, 0.4, -79.4, -10.1, 0.4, -79.4, -79.4, 0.4, -10.1, -79.4, 0.4, -0.199997, -79.4, 0.4, 49.3, -79.4, 0.4, 59.2, -49.7, 0.4, 79.3, -39.8, 0.4, 79.3, 79.3, 0.4, -20, 79.3, 0.4, -29.9, 29.5, 0.4, -79.4, 19.6, 0.4, -79.4, 49.3, 0.4, 79.3, 79.3, 0.4, 59.2, 79.3, 0.4, 49.3, 39.4, 0.4, 79.3, -39.8, 0.4, -79.4, -49.7, 0.4, -79.4, -79.4, 0.4, -49.7, -79.4, 0.4, -39.8, -79.4, 0.4, -0.199997, -79.4, 0.4, 9.7, -0.199997, 0.4, 79.3, 79.3, 0.4, 9.7, 79.3, 0.4, -0.199997, -0.199997, 0.4, -79.4, 79.3, 0.4, -39.8, 79.3, 0.4, -49.7, 49.3, 0.4, -79.4, 39.4, 0.4, -79.4, -79.4, 0.4, 9.7, -79.4, 0.4, 19.6, -10.1, 0.4, 79.3, -0.199997, 0.4, 79.3, -79.4, 0.4, 19.6, -79.4, 0.4, 29.5, -20, 0.4, 79.3, -10.1, 0.4, 79.3, -79.4, 0.4, 39.4, -79.4, 0.4, 49.3, -39.8, 0.4, 79.3, -29.9, 0.4, 79.3, 79.3, 0.4, -0.199997, 79.3, 0.4, -10.1, 9.7, 0.4, -79.4, -0.199997, 0.4, -79.4, 39.4, 0.4, 79.3, 79.3, 0.4, 49.3, 79.3, 0.4, 39.4, 29.5, 0.4, 79.3, -29.9, 0.4, -79.4, -39.8, 0.4, -79.4, -79.4, 0.4, -39.8, -79.4, 0.4, -29.9, 19.6, 0.4, 79.3, 79.3, 0.4, 29.5, 79.3, 0.4, 19.6, 9.7, 0.4, 79.3, 79.3, 0.4, -29.9, 79.3, 0.4, -39.8, 39.4, 0.4, -79.4, 29.5, 0.4, -79.4, -10.1, 0.4, -79.4, -20, 0.4, -79.4, -79.4, 0.4, -20, -79.4, 0.4, -10.1, 9.7, 0.4, 79.3, 79.3, 0.4, 19.6, 79.3, 0.4, 9.7, -0.199997, 0.4, 79.3 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 13, 12, 14 ), PoolIntArray( 14, 12, 15 ), PoolIntArray( 18, 17, 16 ), PoolIntArray( 20, 19, 21 ), PoolIntArray( 21, 19, 22 ), PoolIntArray( 25, 24, 23 ), PoolIntArray( 27, 26, 28 ), PoolIntArray( 28, 26, 29 ), PoolIntArray( 31, 30, 32 ), PoolIntArray( 32, 30, 33 ), PoolIntArray( 35, 34, 36 ), PoolIntArray( 36, 34, 37 ), PoolIntArray( 39, 38, 40 ), PoolIntArray( 40, 38, 41 ), PoolIntArray( 43, 42, 44 ), PoolIntArray( 44, 42, 45 ), PoolIntArray( 47, 46, 48 ), PoolIntArray( 48, 46, 49 ), PoolIntArray( 51, 50, 52 ), PoolIntArray( 52, 50, 53 ), PoolIntArray( 55, 54, 56 ), PoolIntArray( 56, 54, 57 ), PoolIntArray( 59, 58, 60 ), PoolIntArray( 60, 58, 61 ), PoolIntArray( 63, 62, 64 ), PoolIntArray( 64, 62, 65 ), PoolIntArray( 67, 66, 68 ), PoolIntArray( 68, 66, 69 ), PoolIntArray( 71, 70, 72 ), PoolIntArray( 72, 70, 73 ), PoolIntArray( 75, 74, 76 ), PoolIntArray( 76, 74, 77 ), PoolIntArray( 79, 78, 80 ), PoolIntArray( 80, 78, 81 ), PoolIntArray( 81, 78, 82 ), PoolIntArray( 82, 78, 83 ), PoolIntArray( 85, 84, 86 ), PoolIntArray( 86, 84, 87 ), PoolIntArray( 89, 88, 90 ), PoolIntArray( 90, 88, 91 ), PoolIntArray( 93, 92, 94 ), PoolIntArray( 94, 92, 95 ), PoolIntArray( 97, 96, 98 ), PoolIntArray( 98, 96, 99 ), PoolIntArray( 101, 100, 102 ), PoolIntArray( 102, 100, 103 ), PoolIntArray( 105, 104, 106 ), PoolIntArray( 106, 104, 107 ), PoolIntArray( 109, 108, 110 ), PoolIntArray( 110, 108, 111 ), PoolIntArray( 113, 112, 114 ), PoolIntArray( 114, 112, 115 ), PoolIntArray( 117, 116, 118 ), PoolIntArray( 118, 116, 119 ), PoolIntArray( 121, 120, 122 ), PoolIntArray( 122, 120, 123 ), PoolIntArray( 125, 124, 126 ), PoolIntArray( 126, 124, 127 ) ]

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 160, 160 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( 80, 0, 80, -80, 0, 80, 80, 0, -80, -80, 0, 80, -80, 0, -80, 80, 0, -80 )

[node name="Escenario_Prueba" type="Spatial"]
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.899672, 0.436566, 0, -0.436566, -0.899672, 30.4031, 3.75424, 5.75179 )
visible = false
layers = 4
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.205897, 0, 0.978574, 0, 1, 0, -0.978574, 0, -0.205897, 3.37259, -9.66808, 23.2591 )

[node name="PrimeraPersona" parent="." groups=[
"Jugador",
] instance=ExtResource( 4 )]
<<<<<<< HEAD
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.5849, 2.20526, 44.4879 )
=======
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5969, 2.20526, 53.4653 )
>>>>>>> master

[node name="WorldEnvironment" type="WorldEnvironment" parent="." groups=[
"EfectosVisuales",
]]
environment = SubResource( 2 )

[node name="MockupCasa" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0.553035 )

[node name="Trampas" type="Node" parent="."]

[node name="Trampa" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 12.2092, 1.58846, 26.1675 )
script = null

[node name="Trampa2" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -8.41103, 1.58846, 45.3898 )

[node name="Trampa3" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -54.894, 1.58846, 48.1857 )

[node name="Trampa4" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -52.4475, 1.58846, 17.0806 )

[node name="Trampa5" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -28.6818, 1.58846, -41.9842 )

[node name="Trampa6" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 8.36478, 1.58846, -65.4004 )

[node name="Trampa7" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 63.2356, 1.58846, -18.2185 )

[node name="Trampa8" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 63.2357, 1.58846, 33.1573 )

[node name="Trampa9" parent="Trampas" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 63.5852, 1.58846, 48.1856 )

[node name="Luces" type="Node" parent="."]

[node name="LuzTitilante" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.49493, 2.89478, 47.1458 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante2" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.891, 2.89478, 40.1559 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante3" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -65.7052, 2.89478, 29.671 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante4" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -64.6567, 2.89478, -24.5008 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante5" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -39.1435, 2.89478, -17.8604 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante6" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.503, 2.89478, -35.3351 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante7" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 53.1233, 2.89478, -16.4624 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante8" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 53.1233, 2.89478, 41.2044 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante9" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 71.297, 2.89478, 35.2629 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante10" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.9475, 2.89478, 0.313412 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante11" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 71.297, 2.89478, -38.4806 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante12" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 73.0463, 2.89478, -62.5963 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante13" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 53.4746, 2.89478, -65.7418 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante14" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.8544, 2.89478, -64.3438 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante15" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.1271, 2.89478, -68.8872 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante16" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.09877, 2.89478, -68.5377 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante17" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.6184, 2.89478, -67.1398 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante18" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -63.6064, 2.89478, -65.7418 )
retraso = 0.1
iteraciones = 10

[node name="LuzTitilante19" parent="Luces" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.3942, 2.89478, -43.7236 )
retraso = 0.1
iteraciones = 10

[node name="Llaves" type="Node" parent="."]

[node name="Llave" parent="Llaves" instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 20.4195, 1.29349, 23.5134 )

[node name="Llave2" parent="Llaves" instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -67.4463, 1.29349, -6.49712 )

[node name="Llave3" parent="Llaves" instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 50.3797, 1.29349, -69.286 )

[node name="Puertas" type="Node" parent="."]

[node name="PuertaMock" parent="Puertas" instance=ExtResource( 9 )]
transform = Transform( 2.258, 0, 0, 0, 3.593, 0, 0, 0, 1, 1.40387, 3.48601, 36.1048 )

[node name="PuertaMock2" parent="Puertas" instance=ExtResource( 9 )]
transform = Transform( 2.258, 0, 0, 0, 3.593, 0, 0, 0, 1, -58.8613, 3.48601, -36.975 )

[node name="PuertaMock3" parent="Puertas" instance=ExtResource( 9 )]
transform = Transform( 3.13, 0, 0, 0, 3.874, 0, 0, 0, 1, 33.1835, 3.75799, -18.412 )

[node name="PuertaMock4" parent="Puertas" instance=ExtResource( 9 )]
transform = Transform( 3.13, 0, 0, 0, 3.874, 0, 0, 0, 1, 52.8618, 3.75799, -47.6341 )

[node name="Escondites" type="Node" parent="."]

[node name="Escondite" parent="Escondites" instance=ExtResource( 11 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 20.4517, 1.2503, 7.30396 )

[node name="Notas" type="Node" parent="."]

[node name="Nota" parent="Notas" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.28445, 1.57162, 51.4318 )

[node name="Amigo" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -58.7017, 0.896078, -37.9115 )

[node name="Navigation" type="Navigation" parent="." groups=[
"Navegacion",
]]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance"]
mesh = SubResource( 4 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Navigation/NavigationMeshInstance/MeshInstance"]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape" type="CollisionShape" parent="Navigation/NavigationMeshInstance/MeshInstance/StaticBody"]
shape = SubResource( 5 )

[node name="EnemigoContenedor" type="Node" parent="."]

[node name="Enemigo" parent="EnemigoContenedor" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.919671, -13 )
script = ExtResource( 19 )
velocidad = 5.0

[node name="PuntosPatrulla" type="Node" parent="EnemigoContenedor"]

[node name="Position3D" type="Position3D" parent="EnemigoContenedor/PuntosPatrulla"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.326, 50, -43.62 )

[node name="Position3D2" type="Position3D" parent="EnemigoContenedor/PuntosPatrulla"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3491, 50, -43.9959 )

[node name="Position3D3" type="Position3D" parent="EnemigoContenedor/PuntosPatrulla"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.1304, 50, 5.41653 )

[node name="Position3D4" type="Position3D" parent="EnemigoContenedor/PuntosPatrulla"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1824, 50, 6.94945 )

[node name="Sonidos" type="Node" parent="."]

[node name="SonidoAmbiental" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 12 )
volume_db = -20.0
autoplay = true

[node name="Puerta" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 13 )

[node name="Llave" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 14 )

[node name="GUI" parent="." instance=ExtResource( 15 )]
visible = false

[node name="TrampaPrueba" parent="." instance=ExtResource( 17 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 23.5502, 0, 44.496 )
visible = false

[node name="Puzzle_1C" parent="." instance=ExtResource( 20 )]
visible = false

[node name="Puzzle_1B" parent="." instance=ExtResource( 21 )]
visible = false

<<<<<<< HEAD
[node name="Puzzle_2C" parent="." instance=ExtResource( 18 )]
visible = false
=======
[node name="TrampaPrueba" parent="." instance=ExtResource( 17 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 23.0871, 0, 41.7174 )
>>>>>>> master
